--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "teleconsulta-sigma",
   "productName": "SD TeleConsulta",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "My Electron application description",
   "main": "src/index.js",
   "scripts": {
@@ -21,7 +21,8 @@
   "config": {
     "forge": {
       "packagerConfig": {
-        "icon": "src/icon.ico"
+        "icon": "src/icon",
+        "platform": "all"
       },
       "makers": [
         {
@@ -71,7 +72,6 @@
       "category": "public.app-category.Reference"
     },
     "win": {
-      "icon": "src/icon.ico"
     }
   }
 }
