--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "teleconsulta-sigma",
   "productName": "SD TeleConsulta",
-  "version": "1.0.1",
-  "description": "My Electron application description",
+  "version": "1.2.4",
+  "description": "Aplicacion de enlace a plataforma TeleConsulta de SD Sigma.",
   "main": "src/index.js",
   "scripts": {
     "start": "electron-forge start",
@@ -49,7 +49,8 @@
     }
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+    "firebase": "^7.15.0"
   },
   "devDependencies": {
     "electron-builder": "^22.7.0",
@@ -71,7 +72,7 @@
     "mac": {
       "category": "public.app-category.Reference"
     },
-    "win": {
-    }
+    "win": {}
   }
 }
+
